ShopMicro/k8s/ml-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ml-service
  namespace: shopmicro
  labels:
    app: ml-service
spec:
  replicas: 1
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: ml-service
  template:
    metadata:
      labels:
        app: ml-service
    spec:
      tolerations:
      - key: "ml-workload"
        operator: "Exists"
        effect: "NoSchedule"
      containers:
      - name: ml-service
        image: 307946680662.dkr.ecr.us-east-1.amazonaws.com/dev-shopmicro-ml-service:latest
        ports:
        - containerPort: 5000
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "300m"
            memory: "256Mi"
        livenessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 15
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /health
            port: 5000
          initialDelaySeconds: 5
          periodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: ml-service
  namespace: shopmicro
spec:
  selector:
    app: ml-service
  ports:
  - port: 5000
    targetPort: 5000
